--- a/style.css
+++ b/style.css
@@ -69,3 +69,38 @@ nav ul li a{
     text-align: center;
     background-color: #0c6b68;
 }
+.carousel {
+    position: relative;
+    max-width: 600px; /* Adjust based on your needs */
+    margin: auto;
+    overflow: hidden;
+}
+
+.images img {
+    width: 100%;
+    display: none;
+}
+
+.carousel .Prev, .carousel .Next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.carousel .Next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.carousel .Prev:hover, .carousel .Next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
